Global search created and other fixes
